chore(manual): ran code inspection and fixed findings